k8s/base/mysql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: dns-firewall
  labels:
    app: mysql
    app.kubernetes.io/name: mysql
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
      name: mysql
  selector:
    app: mysql
