k8s/base/redis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: dns-firewall
  labels:
    app: redis
    app.kubernetes.io/name: redis
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
      name: redis
  selector:
    app: redis
