k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dns-firewall
  namespace: dns-firewall
  labels:
    app: dns-firewall
    app.kubernetes.io/name: dns-firewall
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "instance"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: dns-firewall
  ports:
    - name: dns-udp
      port: 53
      targetPort: 8053
      protocol: UDP
    - name: metrics
      port: 2112
      targetPort: 2112
      protocol: TCP
